...
            android:layout_height="150dp"
            android:adjustViewBounds="false"
            android:background="@drawable/button_gpl"
            android:contentDescription="@string/FAImageDesc"
            android:cropToPadding="false" />
        <ImageButton
            android:id="@+id/imbtnCardiolipins"
            android:layout_width="115dp"
            android:layout_height="150dp"
            android:adjustViewBounds="false"
            android:background="@drawable/button_cl"
            android:contentDescription="@string/FAImageDesc"
            android:cropToPadding="false" />
...
            android:layout_height="150dp"
            android:adjustViewBounds="false"
            android:background="@drawable/button_sl"
            android:contentDescription="@string/FAImageDesc"
            android:cropToPadding="false" />
        <ImageButton
            android:id="@+id/imbtnCholesterylEsters"
            android:layout_width="115dp"
            android:layout_height="150dp"
            android:adjustViewBounds="false"
            android:background="@drawable/button_ce"
            android:contentDescription="@string/FAImageDesc"
            android:cropToPadding="false" />
...
